dev:
   * remove support for python versions < 3.5
   * support writing of stack header
   * add support for '{trc_num}' in the index which inserts the number of the trace
v0.4.1:
   * allow to set libver when creating a new file (default is now 'earliest' for best backwards compatibility)
v0.4.0:
   * add official support for python 3.7 and 3.8
v0.3.2:
   * Stream returned by readh5 is now sorted
v0.3.0:
   * remove future dependency
   * change order of optional arguments (e.g. move mode argument to the end for read function)
   * change default for group from 'waveforms/' to '/' and therfor start the index with 'waveforms/'
v0.2.3:
   * support writing of processing header
   * add version file attribute
v0.2.2:
   * add index attribute to HDF5 files to store the used index
   * add headonly argument to writeh5 to support writing of the stats
     dictionary into an existing HDF5 database
v0.2.1:
   * add future as dependency
v0.2.0:
   * support for Python3
v0.1.0:
  * initial release